--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- a meta é uma tag de configuração do documento, aquilo que não é visível ao usuário -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/links-icon.png" type="image/png">
     <title>DevLinks</title>
   </head>
   <body>
